@@ -1047,7 +1047,8 @@
     </branch>
   </module>
   <module id="gtk-engines">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
+    <branch id="gtk-engines-2-10" stringfrozen="true"/>
   </module>
   <module id="gtkhtml">
     <branch id="HEAD"/>
