@@ -410,7 +410,7 @@
       <module id="gnome-volume-manager" branch="gnome-2-18"/>
       <module id="gnopernicus"/>
       <module id="gok"/>
-    	<module id="gtk-engines"/>
+    	<module id="gtk-engines" branch="gtk-engines-2-10"/>
       <module id="gtkhtml" branch="gnome-2-18"/>
       <module id="gtksourceview"/>
       <module id="gucharmap"/>
