@@ -1,3 +1,8 @@
+2007-05-19  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branch gtk-engines (gtk-engines-2-10).
+
 2007-05-17  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
